cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__AmazonScience__Multi-IaC-Eval__multi_iac_eval__task_56.yaml
Description: |
  This stack automates the creation of an EC2 Network Acl and
  its entries and adds a NAT Gateway to enable internet access for the private subnet.

Conditions:
  IsUsEast1: !Equals [!Ref "AWS::Region", "us-east-1"]

Resources:
  # A VPC to hold the network ACLs
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/24

  # Create DHCP options using AWS provided DNS
  DhcpOptions:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainName: !If [IsUsEast1, ec2.internal, !Sub "${AWS::Region}.compute.internal"]
      DomainNameServers:
      - AmazonProvidedDNS
      NetbiosNodeType: 2

  # Associate DHCP options to a VPC
  VpcDhcpOptions:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      DhcpOptionsId: !GetAtt DhcpOptions.DhcpOptionsId
      VpcId: !Ref Vpc

  # Create Private subnet in 1st available AZ with the first /26 subnet mask of the VPC CIDR
  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs "us-east-1"]
      CidrBlock:
        Fn::Select:
        - 0
        - Fn::Cidr:
            - !GetAtt Vpc.CidrBlock
            - 2
            - 6
      MapPublicIpOnLaunch: false
      VpcId: !Ref Vpc

  # Create Public subnet in 1st available AZ with the second /26 subnet mask of the VPC CIDR
  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs "us-east-1"]
      CidrBlock:
        Fn::Select:
        - 1
        - Fn::Cidr:
            - !GetAtt Vpc.CidrBlock
            - 2
            - 6
      MapPublicIpOnLaunch: true
      VpcId: !Ref Vpc

  # A network ACL attached to the VPC
  NetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref Vpc

  # A network ACL entry to allow https traffic inside the VPC
  InboundHTTPSRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId:
        Ref: NetworkAcl
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      CidrBlock: !GetAtt Vpc.CidrBlock
      PortRange:
        From: 443
        To: 443

  # A network ACL entry to allow ssh traffic inside the VPC
  InboundSSHRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId:
        Ref: NetworkAcl
      RuleNumber: 101
      Protocol: 6
      RuleAction: allow
      CidrBlock: !GetAtt Vpc.CidrBlock
      PortRange:
        From: 22
        To: 22

  # A network ACL entry to allow all outbound traffic
  OutboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId:
        Ref: NetworkAcl
      RuleNumber: 100
      Protocol: -1
      Egress: true
      RuleAction: allow
      CidrBlock: 0.0.0.0/0

  # Associate the NetworkAcl to Subnet1
  Subnet1NetworkAcl:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !GetAtt Subnet1.SubnetId
      NetworkAclId: !GetAtt NetworkAcl.Id

  # Create an Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway

  # Attach the Internet Gateway to the VPC
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway

  # Create a Route Table for the Public Subnet
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc

  # Create a Route in the Public Route Table to the Internet Gateway
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Associate the Public Route Table with the Public Subnet
  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet2
      RouteTableId: !Ref PublicRouteTable

  # Create a NAT Gateway in the Public Subnet
  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - EIP
          - AllocationId
      SubnetId: !Ref Subnet2
      Tags:
        - Key: Name
          Value: NatGateway

  EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  # Create a Route Table for the Private Subnet
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc

  # Create a Route in the Private Route Table to the NAT Gateway
  PrivateRoute:
    Type: AWS::EC2::Route
    DependsOn: NatGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  # Associate the Private Route Table with the Private Subnet
  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet1
      RouteTableId: !Ref PrivateRouteTable
